# submodule-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cspell.json  package.json  pnpm-lock.yaml  publish.sh
.claude/: settings.json
.husky/: pre-commit  pre-push
src/: lib.rs  main.rs  strings.rs  strings_tests.rs  submodule.rs  submodule_tests.rs
src/commands/: list.rs  list_tests.rs  mod.rs
src/commands/is/: README.md  mod.rs  mod_tests.rs
src/commands/is/conditions/: all_up_to_date.rs  all_up_to_date_tests.rs  clean.rs  clean_tests.rs  mod.rs  on_branch.rs  on_branch_tests.rs  populated.rs  populated_tests.rs  synced.rs  synced_tests.rs
