[package]
name = "submodule-kit"
version = "0.2.2"
edition = "2024"
authors = ["tupe12334 <ofek.gabay.he@gmail.com>"]
description = "A CLI toolkit for managing git submodules"
repository = "https://github.com/tupe12334/submodule-kit"
readme = "README.md"
license = "MIT"
keywords = ["git", "submodule", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
all = "deny"
redundant_closure_for_method_calls = "deny"
# Require `#[must_use]` on pure functions whose return value should not be dropped
must_use_candidate = "deny"
# Require a `# Errors` documentation section on every public function that
# returns `Result`, spelling out the conditions under which it fails. Callers of
# this crate's library API should learn the failure modes from the docs rather
# than reverse-engineering them from the source or hitting them at runtime.
missing_errors_doc = "deny"
# Forbid `.unwrap()` in production code: an unexpected `None`/`Err` should surface
# as a handled, user-facing error rather than crashing the CLI with an opaque panic.
unwrap_used = "deny"
# Require a trailing semicolon on the final statement of a block that returns `()`,
# so a unit-returning statement reads as a statement instead of an accidental tail
# expression. Keeps block endings consistent and makes a later non-`()` change visible.
semicolon_if_nothing_returned = "deny"
# Forbid `.expect()` for the same reason: it only adds a static message and still
# panics on `None`/`Err`, reintroducing the behavior `unwrap_used` prevents.
expect_used = "deny"
# Forbid explicit `panic!` in production code. Like `unwrap_used`, a panic aborts
# the CLI with an opaque message and backtrace instead of returning a handled
# `Result`. Recoverable failures should propagate as errors so the user gets a
# clear message and a non-zero exit code.
panic = "deny"
# Forbid direct slice/array indexing (`xs[i]`, `xs[a..b]`) in production code.
# An out-of-bounds index panics with an opaque message, the exact failure mode
# `unwrap_used`, `expect_used` and `panic` already forbid. This pushes the code
# toward `.get(i)` / `.get(a..b)`, which return `Option` and force the
# out-of-bounds case to be handled and surfaced as a recoverable error.
indexing_slicing = "deny"
# Require doc comments to wrap code-like items (type names, function names,
# paths, URLs) in backticks. Unbackticked identifiers render as prose in
# rustdoc/docs.rs and can be silently mangled (e.g. `Vec<T>` losing its
# generics), so this keeps the crate's public documentation accurate and
# readable. Complements `missing_errors_doc` in raising overall doc quality.
doc_markdown = "deny"
# Use `.copied()` instead of `.cloned()` on iterators of `Copy` types. Both
# produce identical results, but `.cloned()` invokes the `Clone` machinery while
# `.copied()` documents that the element is a trivial bitwise copy. It reads more
# precisely and guards against a later type change silently turning a cheap copy
# into an expensive `Clone`.
cloned_instead_of_copied = "deny"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
