[package]
name = "submodule-kit"
version = "0.2.2"
edition = "2024"
authors = ["tupe12334 <ofek.gabay.he@gmail.com>"]
description = "A CLI toolkit for managing git submodules"
repository = "https://github.com/tupe12334/submodule-kit"
readme = "README.md"
license = "MIT"
keywords = ["git", "submodule", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
all = "deny"
redundant_closure_for_method_calls = "deny"
# Prefer a positive `if` condition over `if !cond { .. } else { .. }`. When an
# `else` branch exists, a negated condition makes the reader mentally invert it
# to follow the primary case and the `else` then re-inverts it. Leading with the
# affirmative condition puts the happy path in the first branch and removes the
# double negative. No current violations exist, so `deny` locks in the clean
# state and prevents future negated-`if`/`else` from creeping in.
if_not_else = "deny"
# Require `#[must_use]` on pure functions whose return value should not be dropped
must_use_candidate = "deny"
# Require a `# Errors` documentation section on every public function that
# returns `Result`, spelling out the conditions under which it fails. Callers of
# this crate's library API should learn the failure modes from the docs rather
# than reverse-engineering them from the source or hitting them at runtime.
missing_errors_doc = "deny"
# Forbid `.unwrap()` in production code: an unexpected `None`/`Err` should surface
# as a handled, user-facing error rather than crashing the CLI with an opaque panic.
unwrap_used = "deny"
# Require a trailing semicolon on the final statement of a block that returns `()`,
# so a unit-returning statement reads as a statement instead of an accidental tail
# expression. Keeps block endings consistent and makes a later non-`()` change visible.
semicolon_if_nothing_returned = "deny"
# Forbid `.expect()` for the same reason: it only adds a static message and still
# panics on `None`/`Err`, reintroducing the behavior `unwrap_used` prevents.
expect_used = "deny"
# Forbid explicit `panic!` in production code. Like `unwrap_used`, a panic aborts
# the CLI with an opaque message and backtrace instead of returning a handled
# `Result`. Recoverable failures should propagate as errors so the user gets a
# clear message and a non-zero exit code.
panic = "deny"
# Forbid direct slice/array indexing (`xs[i]`, `xs[a..b]`) in production code.
# An out-of-bounds index panics with an opaque message, the exact failure mode
# `unwrap_used`, `expect_used` and `panic` already forbid. This pushes the code
# toward `.get(i)` / `.get(a..b)`, which return `Option` and force the
# out-of-bounds case to be handled and surfaced as a recoverable error.
indexing_slicing = "deny"
# Require doc comments to wrap code-like items (type names, function names,
# paths, URLs) in backticks. Unbackticked identifiers render as prose in
# rustdoc/docs.rs and can be silently mangled (e.g. `Vec<T>` losing its
# generics), so this keeps the crate's public documentation accurate and
# readable. Complements `missing_errors_doc` in raising overall doc quality.
doc_markdown = "deny"
# Require the `Self` keyword instead of repeating the concrete type name inside an
# `impl` block. Using `Self` keeps the implementation tied to the type it belongs to,
# so renaming the type touches one line instead of many, and removes ambiguity about
# whether a referenced name is the current type or a different one.
use_self = "deny"
# Use `.copied()` instead of `.cloned()` on iterators of `Copy` types. Both
# produce identical results, but `.cloned()` invokes the `Clone` machinery while
# `.copied()` documents that the element is a trivial bitwise copy. It reads more
# precisely and guards against a later type change silently turning a cheap copy
# into an expensive `Clone`.
cloned_instead_of_copied = "deny"
# Forbid `.map(f).unwrap_or(d)` / `.map(f).unwrap_or_else(g)` chains on
# `Option`/`Result`. They read as two steps and, with `unwrap_or`, build the
# default value on every call even when it isn't used. The single-call
# `.map_or(d, f)` / `.map_or_else(g, f)` express the same intent more directly
# and only construct the default on the `None`/`Err` path.
map_unwrap_or = "deny"
# Require item definitions (`fn`, `const`, `struct`, nested `use`, etc.) to come
# before the statements of an enclosing block rather than being interleaved
# between them. A reader scanning a function body expects executable steps, not a
# helper definition buried mid-flow; hoisting items to the top keeps the
# statement sequence linear and makes the block's local helpers easy to find.
items_after_statements = "deny"
# Inline simple variables directly into format strings (`println!("{name}")`)
# instead of passing them as trailing positional/named args (`println!("{}", name)`).
# The crate targets `edition = "2024"`, where inline format captures are idiomatic;
# this keeps every `format!`/`println!`/`write!` call site uniform, puts each value
# next to where it is rendered, and removes argument-order mistakes in multi-arg
# format strings. The codebase has zero violations, so this is a forward-looking guard.
uninlined_format_args = "deny"
# Prefer `for x in &collection` / `for x in &mut collection` over the explicit
# `for x in collection.iter()` / `.iter_mut()`. The implicit-borrow form is the
# idiomatic Rust loop: it is shorter, reads as "iterate the collection" without
# the `.iter()` ceremony, and makes the borrow (`&` vs `&mut` vs by-value) the
# single visible signal of how the loop consumes its input. No current
# violations exist, so `deny` locks in the clean state and prevents future
# regressions.
explicit_iter_loop = "deny"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
