[package]
name = "submodule-kit"
version = "0.2.2"
edition = "2024"
authors = ["tupe12334 <ofek.gabay.he@gmail.com>"]
description = "A CLI toolkit for managing git submodules"
repository = "https://github.com/tupe12334/submodule-kit"
readme = "README.md"
license = "MIT"
keywords = ["git", "submodule", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
all = "deny"
redundant_closure_for_method_calls = "deny"
# Prefer a positive `if` condition over `if !cond { .. } else { .. }`. When an
# `else` branch exists, a negated condition makes the reader mentally invert it
# to follow the primary case and the `else` then re-inverts it. Leading with the
# affirmative condition puts the happy path in the first branch and removes the
# double negative. No current violations exist, so `deny` locks in the clean
# state and prevents future negated-`if`/`else` from creeping in.
if_not_else = "deny"
# Require `#[must_use]` on pure functions whose return value should not be dropped
must_use_candidate = "deny"
# Require a `# Errors` documentation section on every public function that
# returns `Result`, spelling out the conditions under which it fails. Callers of
# this crate's library API should learn the failure modes from the docs rather
# than reverse-engineering them from the source or hitting them at runtime.
missing_errors_doc = "deny"
# Forbid `.unwrap()` in production code: an unexpected `None`/`Err` should surface
# as a handled, user-facing error rather than crashing the CLI with an opaque panic.
unwrap_used = "deny"
# Require a trailing semicolon on the final statement of a block that returns `()`,
# so a unit-returning statement reads as a statement instead of an accidental tail
# expression. Keeps block endings consistent and makes a later non-`()` change visible.
semicolon_if_nothing_returned = "deny"
# Forbid `.expect()` for the same reason: it only adds a static message and still
# panics on `None`/`Err`, reintroducing the behavior `unwrap_used` prevents.
expect_used = "deny"
# Forbid explicit `panic!` in production code. Like `unwrap_used`, a panic aborts
# the CLI with an opaque message and backtrace instead of returning a handled
# `Result`. Recoverable failures should propagate as errors so the user gets a
# clear message and a non-zero exit code.
panic = "deny"
# Flag `pub(crate)` items declared inside a private module: the module is already
# unreachable from outside the crate, so the `(crate)` restriction adds nothing.
# A plain `pub` expresses the same effective visibility with less noise and keeps
# visibility modifiers honest and easy to scan.
redundant_pub_crate = "deny"
# Forbid direct slice/array indexing (`xs[i]`, `xs[a..b]`) in production code.
# An out-of-bounds index panics with an opaque message, the exact failure mode
# `unwrap_used`, `expect_used` and `panic` already forbid. This pushes the code
# toward `.get(i)` / `.get(a..b)`, which return `Option` and force the
# out-of-bounds case to be handled and surfaced as a recoverable error.
indexing_slicing = "deny"
# Require doc comments to wrap code-like items (type names, function names,
# paths, URLs) in backticks. Unbackticked identifiers render as prose in
# rustdoc/docs.rs and can be silently mangled (e.g. `Vec<T>` losing its
# generics), so this keeps the crate's public documentation accurate and
# readable. Complements `missing_errors_doc` in raising overall doc quality.
doc_markdown = "deny"
# Forbid taking an argument by value (`String`, `Vec<T>`, a struct) when the
# function only reads it and never needs ownership. Passing by value forces the
# caller to either give up its own copy or `.clone()` at the call site — an
# avoidable allocation — and hides from the signature whether the value is
# actually consumed. Borrowing (`&str`, `&[T]`, `&T`) makes the contract honest
# and lets callers keep their data. There are no violations in `src` today, so
# this rule carries zero current cost and simply keeps the library's API taking
# only the ownership it genuinely needs as it grows.
needless_pass_by_value = "deny"
# Require the `Self` keyword instead of repeating the concrete type name inside an
# `impl` block. Using `Self` keeps the implementation tied to the type it belongs to,
# so renaming the type touches one line instead of many, and removes ambiguity about
# whether a referenced name is the current type or a different one.
use_self = "deny"
# Use `.copied()` instead of `.cloned()` on iterators of `Copy` types. Both
# produce identical results, but `.cloned()` invokes the `Clone` machinery while
# `.copied()` documents that the element is a trivial bitwise copy. It reads more
# precisely and guards against a later type change silently turning a cheap copy
# into an expensive `Clone`.
cloned_instead_of_copied = "deny"
# Forbid `todo!()` in production code. The macro expands to a panic, so a
# placeholder left in a shipped path aborts the CLI with an opaque message at the
# moment a user exercises it. This closes a gap left by `panic`, `unwrap_used`,
# `expect_used` and `indexing_slicing`, which already forbid the other ways code
# can panic instead of returning a handled `Result`: unfinished work must surface
# at compile time, not as a runtime crash for the user.
todo = "deny"
# Forbid `.map(f).unwrap_or(d)` / `.map(f).unwrap_or_else(g)` chains on
# `Option`/`Result`. They read as two steps and, with `unwrap_or`, build the
# default value on every call even when it isn't used. The single-call
# `.map_or(d, f)` / `.map_or_else(g, f)` express the same intent more directly
# and only construct the default on the `None`/`Err` path.
map_unwrap_or = "deny"
# Require item definitions (`fn`, `const`, `struct`, nested `use`, etc.) to come
# before the statements of an enclosing block rather than being interleaved
# between them. A reader scanning a function body expects executable steps, not a
# helper definition buried mid-flow; hoisting items to the top keeps the
# statement sequence linear and makes the block's local helpers easy to find.
items_after_statements = "deny"
# Inline simple variables directly into format strings (`println!("{name}")`)
# instead of passing them as trailing positional/named args (`println!("{}", name)`).
# The crate targets `edition = "2024"`, where inline format captures are idiomatic;
# this keeps every `format!`/`println!`/`write!` call site uniform, puts each value
# next to where it is rendered, and removes argument-order mistakes in multi-arg
# format strings. The codebase has zero violations, so this is a forward-looking guard.
uninlined_format_args = "deny"
# Prefer `for x in &collection` / `for x in &mut collection` over the explicit
# `for x in collection.iter()` / `.iter_mut()`. The implicit-borrow form is the
# idiomatic Rust loop: it is shorter, reads as "iterate the collection" without
# the `.iter()` ceremony, and makes the borrow (`&` vs `&mut` vs by-value) the
# single visible signal of how the loop consumes its input. No current
# violations exist, so `deny` locks in the clean state and prevents future
# regressions.
explicit_iter_loop = "deny"
# Forbid `unimplemented!()` in production code. Like `todo!()` and `panic!()`,
# it expands to a panic at runtime rather than surfacing a compile-time error or
# a handled `Result`. Shipping an `unimplemented!()` call means a user can hit a
# code path and receive an opaque crash instead of a clear error message. Since
# the crate already bans `todo`, `panic`, `unwrap_used`, `expect_used`, and
# `indexing_slicing`, adding `unimplemented` closes the remaining gap and makes
# the no-runtime-panic contract enforced by the full set of lints complete.
unimplemented = "deny"
# Require a `# Panics` section in the doc comment of any public, documented
# function that can panic. This is the natural complement to `missing_errors_doc`:
# just as callers deserve to know under which conditions a `Result`-returning
# function fails, they deserve to know when a function may abort. Because this
# crate already denies `panic`, `unwrap_used`, `expect_used`, `indexing_slicing`,
# `todo`, and `unimplemented`, there are currently zero violations — enabling
# the lint is a forward-looking guard that prevents a future panicking path from
# shipping without documentation.
missing_panics_doc = "deny"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
